src/objects/BookingTimeTable__c.object
<CustomObject>
    <description>Booking for Hall and resource, Visual Time Schedule</description>
    <fields>
        <fullName>Checkinday__c</fullName>
        <label>到着日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <defaultValue>&quot;red&quot;</defaultValue>
        <label>色</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeLineComment__c</fullName>
        <label>時刻説明</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeLst__c</fullName>
        <label>時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:10</fullName>
                </value>
                <value>
                    <fullName>06:20</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>06:40</fullName>
                </value>
                <value>
                    <fullName>06:50</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:10</fullName>
                </value>
                <value>
                    <fullName>07:20</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>07:40</fullName>
                </value>
                <value>
                    <fullName>07:50</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:10</fullName>
                </value>
                <value>
                    <fullName>08:20</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>08:40</fullName>
                </value>
                <value>
                    <fullName>08:50</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:10</fullName>
                </value>
                <value>
                    <fullName>09:20</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>09:40</fullName>
                </value>
                <value>
                    <fullName>09:50</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:10</fullName>
                </value>
                <value>
                    <fullName>10:20</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>10:40</fullName>
                </value>
                <value>
                    <fullName>10:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>タイムテーブル</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Checkinday__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>タイムテーブル#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>